Fix pages-selection margin issue on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ span.unread {
 }
 
 .pages-top {
-	margin-top: -30px;
+	/* margin-top: -30px; */
 	text-align: center;
 }
 
@@ -422,6 +422,6 @@ li.newmessage a {
 }
 
 
-iframe body{
+iframe body {
 	background: transparent;
 }
